--- a/src/components/CheckListWizard/ChecklistWizardBuilder/ScaleOptionBuilder/index.scss
+++ b/src/components/CheckListWizard/ChecklistWizardBuilder/ScaleOptionBuilder/index.scss
@@ -14,7 +14,7 @@
   background-color: #ffffff;
 }
 
-.value {
+.scale-value {
   display: flex;
   justify-content: center;
   align-items: center;
